--- a/src/TheWorkBook.App/wwwroot/index.html
+++ b/src/TheWorkBook.App/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>TheWorkBook.App</title>
+	<title>TheWorkBook</title>
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
