--- a/src/TheWorkBook/wwwroot/index.html
+++ b/src/TheWorkBook/wwwroot/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>TheWorkBook</title>
 	<base href="/" />
+	<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="TheWorkBook.styles.css" rel="stylesheet" />
@@ -19,8 +21,9 @@
 		<a href="" class="reload">Reload</a>
 		<a class="dismiss">🗙</a>
 	</div>
-
+	
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
+	<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
 </body>
 
