Added goBack script.

--- a/src/TheWorkBook/wwwroot/index.html
+++ b/src/TheWorkBook/wwwroot/index.html
@@ -24,7 +24,11 @@
 	
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
-
+	<script>
+        window.goBack = () => {
+            history.go(-1);
+        }
+	</script>
 </body>
 
 </html>
